# HACCyTrees

./: .bumpversion.cfg  .gitignore  .workflow.yaml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: sphinx.yml
docs/: Makefile  conf.py  document_simulations.py  index.rst
docs/_static/: custom.css
docs/creating/: index.rst  references.rst
docs/reading/: branch_matrices.rst  example_mass_growth.py  example_merger_rate.py  examples.rst  fragments.rst  getting_started.rst  layout.rst  simulations.rst  subhalo_model.rst  visualization.rst
docs/utils/: distribute.rst  overview.rst  partition.rst  temporary_storage.rst
docs/utils/temporary_storage/: haccytrees.utils.datastores.GenericIOStore.rst  haccytrees.utils.datastores.NumpyStore.rst
env/: bashrc.crusher  bashrc.polaris
executables/: treenodes2forest.example.cfg  treenodes2forest.py
haccytrees/: __init__.py  _version.py  simulations.py
haccytrees/coretrees/: __init__.py  assemble.py  coretree_reader.py
haccytrees/coretrees/assemble/: __init__.py  coretrees_assembly_config.py  reorganize_coreproperties.py
haccytrees/mergertrees/: __init__.py  adjacency_matrix.py  catalogs2trees.py  catalogs2trees_hdf5_output.py  forest_manipulation.py  forest_matrix.py  forest_reader.py  fragments.py  submassmodel.py  treenodes.py
haccytrees/mergertrees/assemble/: __init__.py  catalogs2trees.py  catalogs2trees_hdf5_output.py  derived_fields.py  fieldsconfig.py
haccytrees/scripts/: intersect_cores_with_lightcone.py  reorganize_coreproperties.example.toml  reorganize_coreproperties.py  simulation_example.cfg  treenodes2forest.example.cfg  treenodes2forest.galaxymergertree.example.cfg  treenodes2forest.py
haccytrees/utils/: datastores.py  distribute.py  memory.py  mpi_error_handler.py  partition.py  timer.py
haccytrees/visualization/: __init__.py  mergertree.py
