[tool.poetry]
name = "haccytrees"
version = "0.9.1"
description = ""
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]

[tool.poetry.scripts]
haccytrees-convert = "haccytrees.scripts.treenodes2forest:cli"
reorganize-coreproperties = "haccytrees.scripts.reorganize_coreproperties:cli"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
numpy = "^1.24.0"
matplotlib = "^3.7.1"
numba = "^0.58.0"
click = "^8.1.3"
toml = "^0.10.2"
colossus = "^1.3.1"
scipy = "^1.10.1"
h5py = "^3.8.0"
drawSvg = "^1.9.0"


[tool.poetry.group.assemble]
optional = true

[tool.poetry.group.assemble.dependencies]
pygio = { git = "https://git.cels.anl.gov/hacc/genericio.git" }
mpipartition = "^1.0.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-click = "^4.4.0"
numpydoc = "^1.5.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^5.4.3"
ipykernel = "^6.22.0"
flake8 = "^4.0.1"
doc8 = "^0.10.1"
rstcheck = "^3.5.0"
black = "^22.12.0"
notebook = "^6.5.3"
Jinja2 = "^3.1.2"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
