[tool.poetry]
name = "haccytrees"
version = "0.10.0"
description = ""
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]

[tool.poetry.scripts]
haccytrees-convert = "haccytrees.scripts.treenodes2forest:cli"
reorganize-coreproperties = "haccytrees.scripts.reorganize_coreproperties:cli"
intersect-cores-with-lightcone = "haccytrees.scripts.intersect_cores_with_lightcone:cli"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.14"
numpy = "^1.24.0"
matplotlib = "^3.7.1"
numba = "^0.59.1"
click = "^8.1.3"
colossus = "^1.3.1"
scipy = "^1.10.1"
h5py = "^3.8.0"
drawSvg = "^2.3.0"
tomli = "^2.0.1"


[tool.poetry.group.assemble]
optional = true

[tool.poetry.group.assemble.dependencies]
pygio = { git = "https://git.cels.anl.gov/hacc/genericio.git" }
mpipartition = { git = "https://github.com/ArgonneCPAC/MPIPartition.git", branch = "allow_southpole"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-click = "^5.2.1"
numpydoc = "^1.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^5.4.3"
ipykernel = "^6.22.0"
flake8 = "^7.0.0"
doc8 = "^1.1.1"
rstcheck = "^3.5.0"
black = "^24.4.2"
notebook = "^6.5.3"
Jinja2 = "^3.1.2"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
